--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <title>GYMFIT PRO</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym@main/style.css?v=1.3">
+	<link rel="stylesheet" href="https://raw.githack.com/vikingo-44/Software-Gym/main/style.css?v=2024">
 	<link rel="icon" type="image/png" href="https://github.com/vikingo-44/Software-Gym/blob/main/icono2.png?raw=true">
 	<link rel="apple-touch-icon" href="https://github.com/vikingo-44/Software-Gym/blob/main/icono2.png?raw=true">
 </head>
@@ -1307,7 +1307,7 @@
 	<!-- Fondo oscuro para cerrar el menú al tocar afuera -->
 		<div id="mobile-overlay" class="sidebar-overlay" onclick="toggleMobileMenu()"></div>
 
-	<script src="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym@main/script.js?v=1.3"></script>
+	<script src="https://raw.githack.com/vikingo-44/Software-Gym/main/script.js?v=2024"></script>
 
 	<script>
 		window.toggleCamposCompra = function(tipo) {
