--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 								<div class="w-20 h-20 rounded-[1.5rem] viking-bg-red flex items-center justify-center font-black text-black text-3xl italic shadow-2xl" id="al-dash-initials">??</div>
 								<div>
 									<h3 class="text-3xl font-black uppercase italic leading-none" id="al-dash-name">-</h3>
-									<p class="text-red-600 text-[11px] font-black uppercase tracking-widest mt-1">Guerrero Vikingo en Formación</p>
+									<p class="text-red-600 text-[11px] font-black uppercase tracking-widest mt-1">Alumno en Formación</p>
 								</div>
 								<div class="flex flex-col md:flex-row justify-between items-start md:items-end gap-6 mb-8">
 									<!-- BOTÓN MyQR ESTILO PREMIUM -->
@@ -612,7 +612,7 @@
 			<div class="flex justify-between items-center mb-8">
 				<div>
 					<h3 class="text-3xl font-black italic uppercase">Gestión de Alumnos</h3>
-					<p class="text-[10px] text-gray-500 font-bold uppercase tracking-[0.2em] mt-1 italic">Control de accesos y membresías del Valhalla</p>
+					<p class="text-[10px] text-gray-500 font-bold uppercase tracking-[0.2em] mt-1 italic">Control de accesos y membresías</p>
 				</div>
 				<button id="btn-nuevo-alumno" onclick="openModalAlumno()" class="viking-bg-red text-black px-8 py-4 rounded-2xl font-black uppercase italic text-[12px] shadow-xl flex items-center gap-3 hover:scale-105 transition-all">
 					<i data-lucide="user-plus" class="w-4 h-4"></i> Nuevo Alumno
@@ -625,7 +625,7 @@
 					<div class="flex-1 relative">
 						<i data-lucide="search" class="absolute left-4 top-1/2 -translate-y-1/2 w-4 h-4 text-gray-500"></i>
 						<input type="text" 
-							placeholder="Buscar Guerrero por nombre o DNI..." 
+							placeholder="Buscar Alumno por nombre o DNI..." 
 							oninput="searchAlumno(this.value)"
 							class="viking-input pl-12 bg-white/5 border-white/10 text-white rounded-2xl focus:border-red-600 transition-all">
 					</div>
@@ -787,7 +787,7 @@
 			<!-- VISTA ALUMNO (Se mantiene igual, dentro de una tarjeta para que destaque) -->
 			<div id="musculacion-student-view" class="hidden glass-card p-10 rounded-[3rem] border-red-600/10 mb-6 space-y-8">
 				<div class="bg-red-600/10 p-6 rounded-3xl border border-red-600/20" id="student-plan-header">
-					<h4 class="text-xl font-black italic uppercase mb-2">MI RUTINA DEL VALHALLA</h4>
+					<h4 class="text-xl font-black italic uppercase mb-2">MI RUTINA</h4>
 					<p class="text-[11px] text-gray-400 font-bold uppercase tracking-widest" id="al-rutina-objetivo">Cargando objetivo...</p>
 				</div>
 				<div class="grid grid-cols-1 md:grid-cols-2 gap-6" id="student-routine-exercises">
@@ -804,18 +804,18 @@
 			<div id="view-acceso-virtual" class="view-content">
 				<div class="flex justify-between items-center mb-8">
 					<div>
-						<h3 class="text-3xl font-black italic uppercase">Accesos al Valhalla</h3>
+						<h3 class="text-3xl font-black italic uppercase">Accesos al Gimnasio</h3>
 						<p class="text-[10px] text-gray-500 font-bold uppercase tracking-widest mt-1 italic">Control de Molinetes y QR en Tiempo Real</p>
 					</div>
 					<button onclick="startScanner()" class="viking-bg-red text-black px-6 py-3 rounded-xl font-black uppercase italic text-[11px] shadow-lg hover:scale-105 transition-transform flex items-center gap-2">
-						<i data-lucide="camera" class="w-4 h-4"></i> Abrir Ojos de Odín
+						<i data-lucide="camera" class="w-4 h-4"></i> Abrir Cámara
 					</button>
 				</div>
 
 				<div class="glass-card p-6 rounded-[2.5rem] border-white/5">
 					<!-- Cabecera de columnas -->
 					<div class="grid grid-cols-5 gap-4 px-6 mb-4 opacity-50 text-[10px] font-black uppercase italic tracking-widest">
-						<span>Guerrero / Alumno</span>
+						<span>Alumno</span>
 						<span>DNI / Usuario</span>
 						<span>Fecha y Hora</span>
 						<span>Método</span>
@@ -973,7 +973,7 @@
             <!-- Botón de Cierre -->
             <div class="flex gap-4 pt-10">
                 <button onclick="closeModal('modal-ficha-tecnica')" class="w-full py-4 viking-bg-red text-black rounded-2xl font-black uppercase italic text-[12px] shadow-lg hover:scale-[1.02] transition-transform">
-                    Cerrar Ficha del Guerrero
+                    Cerrar Ficha
                 </button>
             </div>
         </div>
