--- a/index.html
+++ b/index.html
@@ -1202,6 +1202,10 @@
                     <select id="plan-tipo" class="viking-input" required></select>
                     <input type="number" id="plan-precio" placeholder="Precio ($)" required class="viking-input">
                 </div>
+				<div class="mt-4">
+					<label class="block text-[10px] font-black text-gray-500 uppercase italic mb-1 ml-1">Cupos Mensuales (Créditos)</label>
+					<input type="number" id="plan-clases" placeholder="Ej: 8, 12 o 999 para Libre" class="viking-input w-full">
+				</div>
                 <div class="flex gap-4 pt-4">
                     <button type="button" onclick="closeModal('modal-plan')" class="flex-1 py-4 bg-white/5 rounded-2xl font-black uppercase italic text-[11px]">Cancelar</button>
                     <button type="button" id="btn-delete-plan" class="hidden py-4 px-4 bg-red-900/40 rounded-2xl font-black uppercase italic text-[11px] text-red-500">Eliminar</button>
