--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="login-side-image hidden lg:block lg:w-1/2 h-full relative">
 				<!-- La foto de impacto -->
 				<div class="absolute inset-0 bg-cover bg-center" 
-					style="background-image: url('https://images.unsplash.com/photo-1534438327276-14e5300c3a48?q=80&w=2070&auto=format&fit=crop');">
+					style="background-image: url('https://github.com/vikingo-44/Software-Gym/blob/main/wallpaper.png?raw=true');">
 				</div>
 				<!-- Degradado de fusión hacia el negro de la derecha -->
 				<div class="absolute inset-y-0 right-0 w-64 bg-gradient-to-r from-transparent via-black/40 to-black"></div>
